Prevent mobile nav from overlapping content

--- a/app/design/frontend/Travers/default/styles/blocks/_navigation.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_navigation.scss
@@ -12,7 +12,7 @@ $nav-section-title__height: 60px;
         transition: transform $transition-speed $transition-func;
         height: 100%;
         z-index: $z-index-5;
-        transform: translateX(-100%);
+        transform: translateX(-120%);
         overflow: auto;
         position: fixed;
         top: 0;
